# Wolfenstein3d

./: .gitignore  Makefile  README.md  cub3D  cub3d  start_game.sh
customMap/: southPark.cub
includes/: cub3D.h  drawing_textures.h  game_engine.h
maps/: invalidMap5.cub  manySprites.cub  myMap1.cub  myMap1.txt  small.cub  square.cub  subjectMap.cub
src/: main.c
src/parse_map/: CMakeLists.txt  Makefile  newMap  parseMap  parseMapConfig
src/parse_map/includes/: check_config_error.h  file_work.h  for_tests.h  libft.h  new_map.h  parse_identifier.h  parse_map.h  parse_map_config.h
src/parse_map/libs/libft/: Makefile  ft_arrstrs_addback_bonus.c  ft_arrstrs_len_bonus.c  ft_is_digitsn_bonus.c  ft_nbcmp_bonus.c
src/parse_map/maps/: subjectMap.cub  validMap1.cub  validMap1_2.txt
src/parse_map/maps/invalidMap1/: openMap1.cub  openMap1_3.txt
src/parse_map/maps/invalidMap2/: openMap2.cub  openMap2_2.txt
src/parse_map/maps/invalidMap3/: openMap3.txt  openMap3_3.txt
src/parse_map/maps/invalidMap4/: openMap4.txt
src/parse_map/newMap.dSYM/Contents/: Info.plist
src/parse_map/newMap.dSYM/Contents/Resources/DWARF/: newMap
src/parse_map/parseMap.dSYM/Contents/: Info.plist
src/parse_map/parseMap.dSYM/Contents/Resources/DWARF/: parseMap
src/parse_map/parseMapConfig.dSYM/Contents/: Info.plist
src/parse_map/parseMapConfig.dSYM/Contents/Resources/DWARF/: parseMapConfig
src/parse_map/src/: main.c  new_map.c  parse_map.c  parse_map_config.c
src/parse_map/src/check_config_error/: is_closed_map.c  is_closed_space_utils.c  is_full_config.c  scan_map_error.c
src/parse_map/src/file_work/: file_work.c
src/parse_map/src/for_tests/: print_map.c
src/parse_map/src/gnl/: get_next_line.c  get_next_line_utils.c
src/parse_map/src/init_or_clean/: free_arrstrs.c  free_map.c  free_split.c  init_zero_map.c
src/parse_map/src/parse_identifier/: is_technical_identifier.c  is_texture_identifier.c  parse_identifier.c  parse_technical_utils.c
src/parse_map/src/parse_map/: parse_map.c
src/parse_map/src/parse_map_config/: parse_map_config.c
src/parse_map/src/rgb/: rbg_to_dec.c
temp_save/: init_player.c  player_moving.c  raycasting_render.c
(+48 files in other folders)
